--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -47,7 +47,7 @@
                 </div>
                 <h2>Expeditions</h2>
 
-                <h3>Completed ({{completedExpeditions.length}}) <button v-if="!lessthan(completedExpeditions.length, 1)" type="button" class="btn btn-success pull-right" @click="claimAllCompletedExpeditions()">Claim All</button></h3>
+                <h3>Completed ({{completedExpeditions.length}}) <button v-if="!lessthan(completedExpeditions.length, 1)" type="button" class="btn btn-success btn-xs pull-right" @click="claimAllCompletedExpeditions()">Claim All</button></h3>
                 <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                     <div v-for="expedition in completedExpeditions" key="expedition.id">
                         <div class="well well-sm">
@@ -63,9 +63,14 @@
                             </h4>
                             <div>
                                 <span>{{expedition.completionMessage}}</span>
-                                <span class="text-success">{{expedition.upgradeMessages}}</span>
-                                <span class="text-warning">{{expedition.deathMessage}}</span>
-                                <span class="text-danger">{{expedition.deathMessages}}</span>
+                                <span v-if="expedition.awol" class="text-warning">{{expedition.contract.deathMessage}}</span>
+                                <ul>
+                                    <li v-for="adventurer in expedition.adventurers">
+                                        {{adventurer.type}} {{adventurer.status}}
+                                        <span v-if="adventurer.awol" class="text-danger">didn't come back</span>
+                                        <span v-if="adventurer.upgradedTo != undefined" class="text-success">has become a {{adventurer.upgradedTo}}</span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -76,10 +81,15 @@
                     <div v-for="expedition in runningExpeditions" key="expedition.id">
                         <div class="well well-sm">
                             <h4>{{expedition.contract.name}}</h4>
-                            <div v-for="adventurerType in expedition.adventurers" key="adventurerType.type">
-                                {{adventurerType.amount}} {{adventurerType.type}}
+                            <ul>
+                                <li v-for="adventurer in expedition.adventurers">
+                                    {{adventurer.type}} {{adventurer.status}} {{adventurer.awol}} {{adventurer.upgradedTo}}
+                                </li>
+                            </ul>
+                            <div class="progress progress-striped active">
+                                <div class="progress-bar" v-bind:style="{ width: expeditionProgress(expedition) + '%' }"></div>
                             </div>
-                            <div>{{readableTime(expedition.expires - Date.now())}} remaining</div>
+                            <div v-bind:class="{ 'text-success': expiringDanger(expedition.expires), 'text-warning': expiringWarning(expedition.expires), 'text-danger': expiringSuccess(expedition.expires) }">{{readableTime(expedition.expires - Date.now())}} remaining</div>
                         </div>
                     </div>
                 </transition-group>
