--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -28,18 +28,83 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row" id="AdventurersGame">
-            <div class="col-md-12">
-                <h1>{{game.name}} <span class="text-muted" @click="cheat()">v{{version}}</span></h1>
-                <p>{{game.description}} <a href="#" @click="reset()">Reset the game</a></p>
+    <div id="AdventurersGame">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        {{game.name}} <span class="text-muted">v{{version}}</span>
+                    </a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Coins: {{coins}}</a></li>
+                        <li><a href="#">Reknown: {{reknownText()}} <span class="text-muted">({{reknown}})</span></a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#" @click="reset()">Reset the game</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" data-toggle="modal" data-target="#releaseNotes">Release Notes</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="https://jameshurburgh.github.io/about.html">About the Author</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
+    <!-- Modal About Box -->
+    <div id="releaseNotes" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title" @click="cheat()">Release History</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="list-group">
+                        <div v-for="version in game.versions" class="list-group-item">
+                            <h3 class="list-group-item-heading">{{version.number}}</h3>
+                            <p class="list-group-item-text">{{version.description}}</p>
+                            <h4>Features</h4>
+                            <ul>
+                                <li v-for="feature in version.features">{{feature}}</li>
+                            </ul>
+                            <h4>Bug fixes</h4>
+                            <ul>
+                                <li v-for="bugfix in version.bugfixes">{{bugfix}}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!--<div class="modal-footer">
+                    <a href="https://www.patreon.com/bePatron?u=6205348" target="_blank" class="btn btn-success">Become a Patron!</a>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>-->
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <p>{{game.description}}</p>
             </div>
             <div class="col-md-4">
-                <h2>Coins and stuff</h2>
-                <div>Coins: {{coins}}</div>
-                <div>Reknown: {{reknownText()}} <span class="text-muted">({{reknown}})</span></div>
-
+                
                 <h2>Hired Adventurers</h2>
                 <div v-for="adventurer in adventurers">
                     <div>{{adventurer.plural}}: {{getHiredCount(adventurer.name)}}<span class="text-muted">+{{getAdventurersOnTheJob(adventurer.name)}}</span></div>
@@ -152,23 +217,7 @@
                     </transition-group>
                 </div>
             </div>
-            <div class="col-md-12">
-                <h2>Release History</h2>
-                <div class="list-group">
-                    <div v-for="version in game.versions" class="list-group-item">
-                        <h3 class="list-group-item-heading">{{version.number}}</h3>
-                        <p class="list-group-item-text">{{version.description}}</p>
-                        <h4>Features</h4>
-                        <ul>
-                            <li v-for="feature in version.features">{{feature}}</li>
-                        </ul>
-                        <h4>Bug fixes</h4>
-                        <ul>
-                            <li v-for="bugfix in version.bugfixes">{{bugfix}}</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        </div>
         </div>
     </div>
 </body>
