--- a/www/html/mainContent.html
+++ b/www/html/mainContent.html
@@ -14,16 +14,9 @@
                 </a>
             </li>
             <li class="">
-                <a style="padding: 1px 2px;" href="#finishedQuests" data-toggle="tab" aria-expanded="false">
-                    <img v-if="completedExpeditions.length == 0" width="32px;" src="./img/icons/checklist.png" />
-                    <img v-if="completedExpeditions.length != 0" width="32px;" src="./img/icons/checklist-green.png" />
+                <a style="padding: 1px 2px;" href="#quests" data-toggle="tab" aria-expanded="false">
+                    <img width="32px;" src="./img/icons/checklist.png" />
                     <!--<span class="badge">{{completedExpeditions.length}}</span>-->
-                </a>
-            </li>
-            <li class="">
-                <a style="padding: 1px 2px;" href="#runningQuests" data-toggle="tab" aria-expanded="false">
-                    <img width="32px;" src="./img/icons/sands-of-time.png" />
-                    <!--<span class="badge">{{runningExpeditions.length}}</span>-->
                 </a>
             </li>
             <li class="">
@@ -47,25 +40,34 @@
         </ul>
         <div id="myTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="location">
-                <script id="locationTab">loadWebComponent("locationTab","html/tabs/");</script>
+                <script id="locationTab">
+                    loadWebComponent("locationTab", "html/tabs/");
+                </script>
             </div>
             <div class="tab-pane fade" id="contracts">
-                <script id="noticesTab">loadWebComponent("noticesTab","html/tabs/");</script>
+                <script id="noticesTab">
+                    loadWebComponent("noticesTab", "html/tabs/");
+                </script>
+            </div>
+            <div class="tab-pane fade" id="quests">
+                <script id="questsTab">
+                    loadWebComponent("questsTab", "html/tabs/");
+                </script>
             </div>
             <div class="tab-pane fade" id="hired">
-                <script id="adventurersTab">loadWebComponent("adventurersTab","html/tabs/");</script>
+                <script id="adventurersTab">
+                    loadWebComponent("adventurersTab", "html/tabs/");
+                </script>
             </div>
             <div class="tab-pane fade" id="items">
-                <script id="itemsTab">loadWebComponent("itemsTab","html/tabs/");</script>
-            </div>
-            <div class="tab-pane fade" id="finishedQuests">
-                <script id="finishedQuestsTab">loadWebComponent("finishedQuestsTab","html/tabs/");</script>
-            </div>
-            <div class="tab-pane fade" id="runningQuests">
-                <script id="runningQuestsTab">loadWebComponent("runningQuestsTab","html/tabs/");</script>
+                <script id="itemsTab">
+                    loadWebComponent("itemsTab", "html/tabs/");
+                </script>
             </div>
             <div class="tab-pane fade" id="messages">
-                <script id="messagesTab">loadWebComponent("messagesTab","html/tabs/");</script>
+                <script id="messagesTab">
+                    loadWebComponent("messagesTab", "html/tabs/");
+                </script>
             </div>
             <!-- EXAMPLE 
                 <div class="tab-pane fade" id="EXAMPLE">
