--- a/www/html/mainContent.html
+++ b/www/html/mainContent.html
@@ -38,7 +38,7 @@
                 </a>
             </li>
         </ul>
-        <div id="myTabContent" class="tab-content">
+        <div id="mainTabContent" class="tab-content">
             <div class="tab-pane fade active in" id="location">
                 <script id="locationTab">
                     loadWebComponent("locationTab", "html/tabs/");
