--- a/www/html/tabs/noticesTab.html
+++ b/www/html/tabs/noticesTab.html
@@ -6,7 +6,7 @@
         <a href="#adventurerContracts" data-toggle="tab" aria-expanded="false">Adventurers <span class="badge">{{LocationManager().getCurrentLocation().availableAdventurers.length}}</span></a>
     </li>
 </ul>
-<div id="myTabContent" class="tab-content">
+<div id="noticesTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="questContracts">
         <span v-if="LocationManager().getCurrentLocation().availableContracts.length == 0" class="text-muted text-center col-xs-12">No contracts</span>
         <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button>
