--- a/www/html/tabs/questsTab.html
+++ b/www/html/tabs/questsTab.html
@@ -6,7 +6,7 @@
         <a href="#finishedQuests" data-toggle="tab" aria-expanded="false">Finished <span class="badge">{{completedExpeditions.length}}</span></a>
     </li>
 </ul>
-<div id="myTabContent" class="tab-content">
+<div id="questTabContent" class="tab-content">
     <div class="tab-pane fade active in" id="runningQuests">
         <span v-if="runningExpeditions.length == 0" class="text-muted text-center col-xs-12">No running quests</span>
         <transition-group name="custom-classes-transition" enter-acti ve-class="animated fadeIn" leave-active-class="noOutAnimation">
