--- a/www/html/tabs/adventurersTab.html
+++ b/www/html/tabs/adventurersTab.html
@@ -3,6 +3,9 @@
         <a href="#idleAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('idle')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Idle')}}</span></a>
     </li>
     <li>
+        <a href="#recoveringAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('recovering')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Recovering')}}</span></a>
+    </li>
+    <li>
         <a href="#questingAdventurers" data-toggle="tab" aria-expanded="false"><img :src="SpriteManager().getIcon('questing')" width="20px" /><span class="badge">{{AdventurerManager().countAdventurersAtStatus('Questing')}}</span></a>
     </li>
     <li>
@@ -29,7 +32,34 @@
                     <img src="./img/icons/crown-coin.png" width="16px" /> Claims <strong>{{adventurer.wage}}</strong>% of earnings
                 </div>
                 <div class="panel-footer ">
-                    &nbsp;
+                    <span>{{adventurer.coins}} coins</span>
+                    <div class="pull-right ">{{adventurer.experience}}xp</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="tab-pane fade" id="recoveringAdventurers">
+        <div class="col-xs-12 text-center text-muted">Recovering Adventurers</div>
+        <div class="col-md-6" v-for="adventurer in AdventurerManager().getAdventurersAtStatus('Recovering')">
+            <div class="panel panel-default ">
+                <div class="panel-heading ">
+                    <h3 class="panel-title ">{{adventurer.name.full}}
+                        <button v-if="adventurer.status=='Idle' " type="button " class="btn btn-info btn-xs pull-right " @click="AdventurerManager().talkTo(adventurer.name.first) ">Talk to {{adventurer.name.first}}</button>
+                    </h3>
+                </div>
+                <div class="panel-body ">
+                    <h4>Personal</h4>
+                    <div>Race: <strong>{{adventurer.race.name}}</strong></div>
+                    <div>Occupation: <strong>{{adventurer.type}}</strong></div>
+                    <div>Birth Date: <strong>{{TimeManager().getGameTime(adventurer.birthTime).toDateString()}}</strong> (<strong>{{AdventurerManager().getAge(adventurer)}}</strong> years old)</div>
+                    <h4>Skills</h4>
+                    <span v-for="skill in adventurer.skills " :title="skill.name + ' ' + skill.amount "><img :alt="skill.name " v-for="n in skill.amount " width="24px " :src=" 'img/icons/' + DataManager().getData( 'skills', skill.name).icon + '.png' " /></span>
+                    <h4>Employment</h4>
+                    <img src="./img/icons/crown-coin.png" width="16px" /> Claims <strong>{{adventurer.wage}}</strong>% of earnings
+                    <div>Will be recovered at: {{TimeManager().getGameTime(adventurer.recoverTime).toString()}} </div>
+                </div>
+                <div class="panel-footer ">
+                    <span>{{adventurer.coins}} coins</span>
                     <div class="pull-right ">{{adventurer.experience}}xp</div>
                 </div>
             </div>
@@ -58,7 +88,7 @@
                     </div>
                 </div>
                 <div class="panel-footer ">
-                    &nbsp;
+                    <span>{{adventurer.coins}} coins</span>
                     <div class="pull-right ">{{adventurer.experience}}xp</div>
                 </div>
             </div>
