--- a/www/data.html
+++ b/www/data.html
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="contracts">
-                        <button type="button" class="btn btn-info btn-xl pull-right" @click="exportData(contracts);">Export</button>
+                        <button type="button" class="btn btn-info btn-xl pull-right" @click="exportData(contracts, 'contracts');">Export</button>
                         <div class="panel-group" id="contracts-accordion">
                             <div v-for="contract in contracts" class="panel panel-default">
                                 <div class="panel-heading">
@@ -203,32 +203,48 @@
                                                     <tr style="overflow: auto;">
                                                         <th>Id</th>
                                                         <th>Name</th>
-                                                        <th>Success</th>
-                                                        <th>Fail</th>
-                                                        <th>End Quest</th>
                                                         <th>Duration</th>
                                                         <th>Skill</th>
                                                         <th>Difficulty</th>
+                                                        <th>Success</th>
+                                                        <th>Fail</th>
                                                         <th>Retry</th>
+                                                        <th>Injury On Fail</th>
                                                     </tr>
                                                 </thead>
-                                                <tr v-for="task in contract.tasks">
+                                                <tr v-for="task in contract.tasks" :class="{'info': contract.startTaskId == task.id, 'success': !task.taskAfterSuccess && !task.taskAfterFail }">
                                                     <td>{{task.id}}<span v-if="contract.startTaskId == task.id">*</span></td>
                                                     <td>{{task.name}}</td>
-                                                    <td>{{task.afterSuccessGoToTaskId}}</td>
-                                                    <td>{{task.afterFailGoToTaskId}}</td>
-                                                    <td>{{task.afterSuccessFinishQuest}}</td>
                                                     <td>{{task.duration}} seconds</td>
                                                     <td>
                                                         <img :alt="task.skillTest" width="24px" :src="'img/icons/' + getSkill(task.skillTest).icon + '.png'" />&nbsp;
                                                         {{task.skillTest}}
                                                     </td>
                                                     <td>{{task.difficulty}}</td>
+                                                    <td>{{task.taskAfterSuccess}}</td>
+                                                    <td>{{task.taskAfterFail}}</td>
                                                     <td>{{task.retry}}</td>
+                                                    <td>{{task.injuryOnFail}}</td>
                                                 </tr>
                                                 <tfoot>
+                                                    <tr v-if="input.newTask">
+                                                        <td><input type="text" maxlength="5" size="5" v-model="input.newTask.id"></td>
+                                                        <td><input type="text" maxlength="50" size="20" v-model="input.newTask.name"></td>
+                                                        <td><input type="number" min="0" size="5" v-model="input.newTask.duration"></td>
+                                                        <td>
+                                                            <select class="form-control" v-model="input.newTask.skillTest">
+                                                                <option disabled value="">Please select one</option>
+                                                                <option v-for="skill in skills">{{skill.name}}</option>
+                                                            </select>
+                                                        </td>
+                                                        <td><input type="number" min="0" max="10" v-model="input.newTask.difficulty"></td>
+                                                        <td><input type="text" maxlength="5" size="5" v-model="input.newTask.taskAfterSuccess"></td>
+                                                        <td><input type="text" maxlength="5" size="5" v-model="input.newTask.taskAfterFail"></td>
+                                                        <td><input type="number" min="0" max="5" v-model="input.newTask.retry"></td>
+                                                        <td><input type="text" v-model="input.newTask.injuryOnFail"></td>
+                                                    </tr>
                                                     <tr>
-                                                        <td><button type="button" class="btn btn-success">Add new task</button></td>
+                                                        <td><button type="button" class="btn btn-success" @click="addNewTaskToContract(contract)">Add new task</button></td>
                                                     </tr>
                                                 </tfoot>
                                             </table>
